# nixie

./: CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: release.yml
assets/: Using Multi-Output Plug-Ins in LUNA – Universal Audio Support Home.html
src/: DrumKit.h  FactoryGrooves.h  LMOneLookAndFeel.h  Pattern.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sequencer.h  StepGridComponent.cpp  TransportButton.h  VoiceStripComponent.cpp  VoiceStripComponent.h
